--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,27 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
 
+commands:
+  setup-node-and-yarn-install-with-cache:
+    steps:
+      - node/install:
+          install-yarn: true
+          node-version: latest
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: yarn.lock
+          
 jobs:
-  build:
+  build-and-deploy:
     executor:
       name: node/default
     steps:
       - checkout
-      - node/install-packages
+      - setup-node-and-yarn-install-with-cache
+      - run:
+          name: Lint
+          command: npm run lint
       - add_ssh_keys
-  deploy:
-    executor:
-      name: node/default
-    steps:
       - run: ssh-keyscan mcpeblocker.uz >> ~/.ssh/known_hosts
       - run: ssh -v root@mcpeblocker.uz "./Projects/blog.mcpeblocker.uz/deploy.sh"
 
@@ -29,10 +38,6 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build:
-          filters:
-            branches:
-              only: master
-      - deploy:
           filters:
             branches:
               only: master
