--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,6 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
-
-commands:
-  setup-node-and-yarn-install-with-cache:
-    steps:
-      - node/install:
-          install-yarn: true
-          node-version: latest
-      - node/install-packages:
-          pkg-manager: yarn
           
 jobs:
   build-and-deploy:
@@ -21,10 +12,14 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - setup-node-and-yarn-install-with-cache
+      - node/install-packages:
+          pkg-manager: yarn
       - run:
           name: Lint
           command: npm run lint
+      - run:
+          name: Build
+          command: npm run build
       - add_ssh_keys
       - run: ssh-keyscan mcpeblocker.uz >> ~/.ssh/known_hosts
       - run: ssh -v root@mcpeblocker.uz "./Projects/blog.mcpeblocker.uz/deploy.sh"
