--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
+  },
+  "engines": {
+    "node": "^13"
   }
 }
