--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
+          check-cache: detect
       - run:
           name: Lint
           command: npm run lint
