--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  node: circleci/node@3.0.0
+  node: circleci/node@4.7
           
 jobs:
   build-and-deploy:
@@ -12,6 +12,9 @@ jobs:
       name: node/default
     steps:
       - checkout
+      - node/install:
+          install-yarn: true
+          node-version: latest
       - node/install-packages:
           pkg-manager: yarn
       - run:
