--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - node/install:
           install-yarn: true
-          node-version: latest
+          node-version: v16.14.0
       - node/install-packages:
           pkg-manager: yarn
       - run:
