notify on telegram

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,11 @@ jobs:
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
           script: cd ~/Projects/blog.mcpeblocker.uz && (git stash && git pull) && (chmod +x deploy.sh && ./deploy.sh)
+
+      - name: Notify on telegram
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
         
 
