--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
